--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,12 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+# Tools:
 
-Things you may want to cover:
+* [Active Model Serializers](https://github.com/rails-api/active_model_serializers)
+* [Rspec-Rails](https://github.com/rspec/rspec-rails)
+* Rails 5 API-only mode
 
-* Ruby version
+# Upcoming:
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* Api guide
+* Link to live Api
