--- a/README.rdoc
+++ b/README.rdoc
@@ -7,6 +7,7 @@
 * Rails 5 API-only mode
 * `rack-cors`
 * Versioning to protect against breaking changes
+* [Rack::Attack](https://github.com/kickstarter/rack-attack)
 
 # Upcoming:
 
